--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -1,6 +1,6 @@
 ### Geometric characterization
 
-Consider spacetime $M=\mathbb{R}\times\mathbb{R}^3$ with coordinates $(t,\mathbf{s})$ and Euclidean spatial metric. An emission event at $(t_0,\mathbf{s}_0)$ generates a radially symmetric, measure-valued field supported on the future spherical wavefront
+Consider timespace $M=\mathbb{R}\times\mathbb{R}^3$ with coordinates $(t,\mathbf{s})$ and Euclidean spatial metric. An emission event at $(t_0,\mathbf{s}_0)$ generates a radially symmetric, measure-valued field supported on the future spherical wavefront
 $$
 \mathcal{C}=\{(t,\mathbf{s}) : t\ge t_0,\; r = v\,(t-t_0)\},\quad r=\|\mathbf{s}-\mathbf{s}_0\|,
 $$
@@ -42,7 +42,7 @@ whose delayed solution is $\rho(t,\mathbf{s})=\dfrac{q}{4\pi r^2}\delta(r-v\tau)
 
 ### Path and Dynamics
 
-As a point particle, an Architrino traces a continuous path (or worldline) through spacetime, denoted by its position vector $\mathbf{s}_a(t)$. The field described in the preceding sections is generated continuously from every point along this path.
+As a point particle, an Architrino traces a continuous path (or worldline) through timespace, denoted by its position vector $\mathbf{s}_a(t)$. The field described in the preceding sections is generated continuously from every point along this path.
 
 #### **Path Definition**
 The **path** of an Architrino is the set of points representing its position through time. For any time `t` up to the present moment `$t_{\text{now}}$`, the path is the set:
