--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -6,6 +6,10 @@ $$
 $$
 where $v$ is the constant field speed. At the emission time $t=t_0$, the field is a spatial Dirac delta of magnitude $q$ located at $\mathbf{s}_0$. At each fixed time $t>t_0$, the field is a surface delta measure on the sphere $S_{r}$ of radius $r=v(t-t_0)$ centered at $\mathbf{s}_0$, normalized so its total mass is $q$.
 
+This expanding wavefront has two key properties:
+-   **Indefinite Expansion:** The wavefront expands indefinitely as $t \to \infty$. The radius $r = v(t-t_0)$ grows without bound, and the surface density $q/(4\pi r^2)$ approaches zero but never reaches it.
+-   **Non-interaction with Particles:** The field passes through other Architrinos without being altered, absorbed, or scattered. Its sole effect is to impart an acceleration on the particles it intersects.
+
 ---
 
 ### Analytic form
