--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -54,6 +54,17 @@ $$
 \mathcal{P}_a = \{ \mathbf{s}_a(t) \mid t \le t_{\text{now}} \}
 $$
 
+#### **Sphere Stream**
+As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding potential spheres. The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
+
+Mathematically, at an observation time $t_{obs}$, the sphere stream is the family of all spheres $S_{t_0}$ emitted at each past moment $t_0 \le t_{obs}$. Each sphere $S_{t_0}$ is centered at the historical position $\mathbf{s}_a(t_0)$ and has a radius $r(t_0) = v(t_{obs} - t_0)$.
+
+The sphere stream, denoted $\mathcal{SS}_a(t_{obs})$, is the union of all these spheres:
+$$
+\mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = v(t_{obs} - t_0) \}
+$$
+This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$.
+
 #### **Future Path and Superposition**
 The future path (for $t > t_{\text{now}}$) is determined by integrating the equation of motion, using the Architrino's current position `$\mathbf{s}_a(t_{\text{now}})$` and velocity `$\mathbf{v}_a(t_{\text{now}})$` as initial conditions.
 
