--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -63,7 +63,7 @@ The sphere stream, denoted $\mathcal{SS}_a(t_{obs})$, is the union of all these 
 $$
 \mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = v(t_{obs} - t_0) \}
 $$
-This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$.
+This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$. Since the Architrino's path extends through all of history, its sphere stream is space-filling.
 
 #### **Future Path and Superposition**
 The future path (for $t > t_{\text{now}}$) is determined by integrating the equation of motion, using the Architrino's current position `$\mathbf{s}_a(t_{\text{now}})$` and velocity `$\mathbf{v}_a(t_{\text{now}})$` as initial conditions.
