--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -68,6 +68,8 @@ $$
 $$
 This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$. Since the Architrino's path extends through all of history, its sphere stream is space-filling.
 
+Sphere streams from different Architrinos pass through each other without interacting. This non-interference is what allows for the principle of superposition to be applied when calculating the total acceleration on a particle.
+
 #### **Future Path and Superposition**
 The future path (for $t > t_{\text{now}}$) is determined by integrating the equation of motion, using the Architrino's current position `$\mathbf{s}_a(t_{\text{now}})$` and velocity `$\mathbf{v}_a(t_{\text{now}})$` as initial conditions.
 
