--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -48,6 +48,9 @@ whose delayed solution is $\rho(t,\mathbf{s})=\dfrac{q}{4\pi r^2}\delta(r-v\tau)
 
 As a point particle, an Architrino traces a continuous path (or worldline) through timespace, denoted by its position vector $\mathbf{s}_a(t)$. The field described in the preceding sections is generated continuously from every point along this path.
 
+#### **Conservation and Uniqueness**
+A fundamental postulate of this model is that Architrinos are eternal: they cannot be created or destroyed. This implies that every Architrino has a complete and infinite history, or provenance. Furthermore, the path of each Architrino is unique. 
+
 #### **Coincidence of Particles**
 As point particles, Architrinos have no physical volume. There is nothing in the model to prevent two or more particles from occupying the same location at the same instant in time. For example, in an otherwise empty timespace, an Electrino and a Positrino released from rest with some initial separation will accelerate towards each other and eventually coincide as they pass.
 
