--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -74,11 +74,11 @@ This set represents the complete locus of points in space where the Architrino's
 Sphere streams from different Architrinos pass through each other without interacting. This non-interference is what allows for the principle of superposition to be applied when calculating the total acceleration on a particle.
 
 #### **The Stationary Architrino and Absolute Space**
-A special and fundamental case arises when an Architrino is stationary with respect to absolute space, i.e., its velocity `$\mathbf{v}_a = 0$`.
+A special and fundamental case arises when an Architrino is stationary with respect to absolute space, i.e., its velocity $\mathbf{v}_a = 0$.
 
--   **Static Sphere Stream Geometry:** For a stationary Architrino at a fixed position `$\mathbf{s}_{fixed}$`, its sphere stream consists of a continuous family of perfectly concentric spheres. While each individual sphere expands, the overall geometric form of the stream is static and time-invariant.
+-   **Static Sphere Stream Geometry:** For a stationary Architrino at a fixed position $\mathbf{s}_{fixed}$, its sphere stream consists of a continuous family of perfectly concentric spheres. While each individual sphere expands, the overall geometric form of the stream is static and time-invariant.
 
--   **Bridge to Absolute Space:** This state is physically distinguishable from any state of non-zero velocity. An Architrino in motion (`$\mathbf{v}_a \neq 0$`) generates a non-concentric sphere stream whose pattern is dynamic. The perfect symmetry of the stationary stream provides a unique, observable reference frame. Therefore, the state of being at rest in absolute space is not relative but absolute, providing a direct mathematical and physical bridge to the underlying structure of absolute space.
+-   **Bridge to Absolute Space:** This state is physically distinguishable from any state of non-zero velocity. An Architrino in motion ($\mathbf{v}_a \neq 0$) generates a non-concentric sphere stream whose pattern is dynamic. The perfect symmetry of the stationary stream provides a unique, observable reference frame. Therefore, the state of being at rest in absolute space is not relative but absolute, providing a direct mathematical and physical bridge to the underlying structure of absolute space.
 
 #### **Future Path and Superposition**
 The future path (for $t > t_{\text{now}}$) is determined by integrating the equation of motion, using the Architrino's current position `$\mathbf{s}_a(t_{\text{now}})$` and velocity `$\mathbf{v}_a(t_{\text{now}})$` as initial conditions.
