--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -55,7 +55,7 @@ A fundamental postulate of this model is that Architrinos are eternal: they cann
 As point particles, Architrinos have no physical volume. There is nothing in the model to prevent two or more particles from occupying the same location at the same instant in time. For example, in an otherwise empty timespace, an Electrino and a Positrino released from rest with some initial separation will accelerate towards each other and eventually coincide as they pass.
 
 #### **Path Definition**
-The **path** of an Architrino is the set of points representing its position through time. For any time `t` up to the present moment `$t_{\text{now}}$`, the path is the set:
+The **path** of an Architrino is the set of points representing its position through time. For any time $t$ up to the present moment $t_{\text{now}}$, the path is the set:
 $$
 \mathcal{P}_a = \{ \mathbf{s}_a(t) \mid t \le t_{\text{now}} \}
 $$
@@ -81,13 +81,13 @@ A special and fundamental case arises when an Architrino is stationary with resp
 -   **Bridge to Absolute Space:** This state is physically distinguishable from any state of non-zero velocity. An Architrino in motion ($\mathbf{v}_a \neq 0$) generates a non-concentric sphere stream whose pattern is dynamic. The perfect symmetry of the stationary stream provides a unique, observable reference frame. Therefore, the state of being at rest in absolute space is not relative but absolute, providing a direct mathematical and physical bridge to the underlying structure of absolute space.
 
 #### **Future Path and Superposition**
-The future path (for $t > t_{\text{now}}$) is determined by integrating the equation of motion, using the Architrino's current position `$\mathbf{s}_a(t_{\text{now}})$` and velocity `$\mathbf{v}_a(t_{\text{now}})$` as initial conditions.
+The future path (for $t > t_{\text{now}}$) is determined by integrating the equation of motion, using the Architrino's current position $\mathbf{s}_a(t_{\text{now}})$ and velocity $\mathbf{v}_a(t_{\text{now}})$ as initial conditions.
 
 The total acceleration on an Architrino at any instant is the vector sum of the individual accelerations caused by each intersecting potential sphere from all other source particles. This is the **principle of superposition**:
 $$
 \mathbf{a}_{a, \text{total}}(t) = \sum_{j} \mathbf{a}_{a,j}(t)
 $$
-where `$\mathbf{a}_{a,j}(t)$` is the acceleration induced on the Architrino by the field of source particle `j`. An individual acceleration term is non-zero only if the interaction condition with particle `j` is met at time `t`.
+where $\mathbf{a}_{a,j}(t)$ is the acceleration induced on the Architrino by the field of source particle $j$. An individual acceleration term is non-zero only if the interaction condition with particle $j$ is met at time $t$.
 
 The specific interaction rules that determine the acceleration are defined for subtypes of Architrinos, such as the Electrino and Positrino.
 
