--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.1 - Absolute Space.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.1 - Absolute Space.md
@@ -31,7 +31,7 @@ with the flat metric tensor:
 $$
 g = dx^2 + dy^2 + dz^2
 $$
-This metric has a positive-definite signature `(+, +, +)`.
+This metric has a positive-definite signature $(+, +, +)$.
 
 ---
 
