--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -98,7 +98,7 @@ The specific interaction rules that determine the acceleration are defined for s
 This section details more advanced concepts regarding the Architrino's motion and its field generation.
 
 #### **Velocity Regimes and Local Field Interaction**
-The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a|$. Its velocity relative to the field speed `v` defines three distinct dynamic regimes. Consider a particle at position $\mathbf{s}_a(t_{\text{now}})$ moving with velocity $\mathbf{v}_a$. At an infinitesimal time $\Delta t$ later, its new position is $\mathbf{s}_a(t_{\text{now}} + \Delta t)$. The wavefront it emitted at $t_{\text{now}}$ has expanded to a radius of $r = v \Delta t$.
+The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a|$. Its velocity relative to the field speed $v$ defines three distinct dynamic regimes. Consider a particle at position $\mathbf{s}_a(t_{\text{now}})$ moving with velocity $\mathbf{v}_a$. At an infinitesimal time $\Delta t$ later, its new position is $\mathbf{s}_a(t_{\text{now}} + \Delta t)$. The wavefront it emitted at $t_{\text{now}}$ has expanded to a radius of $r = v \Delta t$.
 
 -   **Sub-field Speed ($|\mathbf{v}_a| < v$):** The particle travels a distance less than the wavefront's radius. It is located *inside* the sphere of its most recent emission, lagging behind it.
 -   **Super-field Speed ($|\mathbf{v}_a| > v$):** The particle travels a distance greater than the wavefront's radius. It is located *outside* the sphere of its most recent emission, moving ahead of it.
